:bug: Fix size and spacing details project

--- a/styles/components/_tag.scss
+++ b/styles/components/_tag.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   min-width: 80px;
   height: 70px;
-  padding: 0px 10px;
+  padding: 0px 20px;
   border-radius: 9999px;
   background: $color-black;
   color: $color-white-80;
